--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10484,7 +10484,6 @@ users:
         - essentials.fly
     permissions:
     - change.chat
-    - -chatcontrol.chat.format.color
     - is.secretary
     - -ch.alias.gc
   290fa262-f514-4a2c-b71a-2f39e22b345b:
@@ -10769,6 +10768,7 @@ users:
     options:
       name: ThatCraftLife
     permissions:
+    - -sank.sounds
     - multiverse.access.underworld
   475f54cd-419f-45f8-8f23-6bc2ac323dd7:
     options:
@@ -11272,7 +11272,7 @@ users:
       name: TheDoctor1213
   7b02decc-d614-4041-9c25-1d3d96440d72:
     group:
-    - percyjackson
+    - darkseid
     options:
       name: That_Panda_Guy
     permissions: []
@@ -11456,7 +11456,7 @@ users:
       name: Green__Dragon
   89dfe8bd-6d75-4a20-a23e-84259bfeccc8:
     group:
-    - infinitysilversurfer
+    - silversurfer
     options:
       name: _Voiden_
     permissions:
@@ -12899,7 +12899,8 @@ users:
     - venom
     options:
       name: Predamorph1519
-    permissions: []
+    permissions:
+    - -sank.sounds
   3041cf7d-c04d-45d7-9ef1-1cc75130c2ff:
     group:
     - apollo
@@ -13015,7 +13016,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - mortal
+    - blackwidow
     options:
       name: _WonderBat_
     worlds:
@@ -13643,7 +13644,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - ironfist
+    - mortal
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -14192,7 +14193,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - flashwallywest
+    - antman
     options:
       name: nightghost2
     permissions:
@@ -14934,7 +14935,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - blacklanterneobardthawne
+    - captainamericasteverogers
     options:
       name: KingBull
     permissions: []
@@ -14951,7 +14952,7 @@ users:
       name: NinjaPizza3
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group:
-    - flashbarryallen
+    - ironmanmkxliii
     options:
       name: BrainyRuler
     permissions: []
@@ -15060,7 +15061,7 @@ users:
       name: Fluff106
   d67305a9-1ff9-4357-bd10-1b5fd8856d78:
     group:
-    - martianmanhunter
+    - ironfist
     options:
       name: EagleSniper10
     permissions: []
@@ -16634,7 +16635,7 @@ users:
       name: rockie777
   83084357-00ad-4414-a0f7-b5f38c11bd20:
     group:
-    - silversurfer
+    - vibe
     options:
       name: QuantumGalaxyy
   2b8dcc7c-0f1b-419d-9285-3d993f2d8cdd:
@@ -16670,7 +16671,14 @@ users:
       name: IronRolay
   0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
     group:
-    - starlord
+    - carnage
+    options:
+      name: adrie_le_zarbi
+  077d6696-918b-4d39-a02d-726c5173ade1:
+    group:
+    - reverseflasheobardthawne
+    options:
+      name: Vinne06
 worlds:
   checkers:
     inheritance:
