--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,5 @@
 groups:
-  hippolytadc:
+  hippolytadc: 
     inheritance:
     - commonherotraits
     options:
@@ -349,7 +349,8 @@ groups:
         - ch.alias.haste0
         - ch.alias.haste1
         - ch.alias.haste2
-  dormammu:
+        - ch.alias.thru
+ dormammu:
     inheritance:
     - commonherotraits
     options:
