--- a/Magic/wands/harryswand1.yml
+++ b/Magic/wands/harryswand1.yml
@@ -9,7 +9,6 @@ harryswand1:
     blink: 31
     fling: 7
     disarm: 28
-    stun: 33
     push: 1
     pull: 4
     torture: 30
@@ -35,14 +34,13 @@ harryswand1:
   - pull
   - flare
   - lift
-  - fling|4
+  - fling
   - fire|3
   - petrify|3
   - disarm|3
   - reflect|4
   - blink|6
   - wound|3
-  - stun|3
   bound: true
   keep: true
   invulnerable: true
