--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10003,7 +10003,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - spidermanpeterparker
+    - harrypotter
     options:
       name: xDcGamer
     worlds:
@@ -12653,6 +12653,7 @@ users:
     options:
       name: Camulll
     permissions:
+    - multiverse.access.underworld
     - -essentials.afk
     - -sank.sounds
     - -griefprevention.spam
@@ -12901,6 +12902,7 @@ users:
     options:
       name: Predamorph1519
     permissions:
+    - multiverse.access.underworld
     - -sank.sounds
   3041cf7d-c04d-45d7-9ef1-1cc75130c2ff:
     group:
@@ -13017,7 +13019,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - blackwidow
+    - cheshire
     options:
       name: _WonderBat_
     worlds:
@@ -13464,7 +13466,7 @@ users:
       name: ForbiddenHatee
   22d125d1-76f0-4078-8b8d-8313d3851f5c:
     group:
-    - spidermanpeterparker
+    - mortal
     options:
       name: superhard0902
   858bcdaf-9aed-4ea8-bbf8-e6ed85ecc5cc:
@@ -13645,7 +13647,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - mortal
+    - flashbarryallen
     options:
       name: CorruptRacer
   8804c5af-7861-4d3b-ae26-750b4cf93f25:
@@ -14194,7 +14196,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - antman
+    - percyjackson
     options:
       name: nightghost2
     permissions:
@@ -14936,9 +14938,9 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - captainamericasteverogers
+    - harrypotter
     options:
-      name: KingBull
+      name: DemonWolf_
     permissions: []
   002b10b9-d275-422c-ba68-255853e98caa:
     group:
@@ -14953,7 +14955,7 @@ users:
       name: NinjaPizza3
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group:
-    - ironmanmkxliii
+    - ironmanmkxv
     options:
       name: BrainyRuler
     permissions: []
@@ -15597,7 +15599,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - harrypotter
+    - mortal
     options:
       name: mythguy1226
     permissions:
@@ -15925,7 +15927,7 @@ users:
       name: Roproman
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group:
-    - godspeed
+    - blacklanterndeathstormraymondrusch
     options:
       name: Like_A_Boss382
     permissions: []
