--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -62,7 +62,10 @@
 # kill:
 #    costs:
 #       health: 10 
-     
+
+fling:
+  parameters:
+     cooldown: 30000
 rictusempra: 
      icon: diamond_axe:32 
      icon_disabled: diamond_hoe:32 
