--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -27,8 +27,7 @@
 #
 # <spellkey>:
 #       icon:  <material name>
-#       category: <anything>
-#       class: <Must be a class from the spells package.>
+#       category: <anything>#       class: <Must be a class from the spells package.>
 #       costs:
 #           xp: <xp/mana amount>
 #           <material_name>: <reagent amount>#      
@@ -62,7 +61,6 @@
 # kill:
 #    costs:
 #       health: 10 
-
 fling:
   parameters:
      cooldown: 30000
