--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -27,7 +27,8 @@
 #
 # <spellkey>:
 #       icon:  <material name>
-#       category: <anything>#       class: <Must be a class from the spells package.>
+#       category: <anything>
+#       class: <Must be a class from the spells package.>
 #       costs:
 #           xp: <xp/mana amount>
 #           <material_name>: <reagent amount>#      
