--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -36,6 +36,7 @@ groups:
         permissions:
         - Magic.wand.use
         - Magic.cast
+        - -Magic.bypass_pvp
   piccolo:
     inheritance:
     - commonherotraits
