--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10003,7 +10003,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - harrypotter
+    - mortal
     options:
       name: xDcGamer
     worlds:
@@ -13019,7 +13019,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - cheshire
+    - redranger
     options:
       name: _WonderBat_
     worlds:
@@ -16389,7 +16389,7 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - infinitysilversurfer
+    - harrypotter
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
