--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -62,6 +62,9 @@
 # kill:
 #    costs:
 #       health: 10 
+superkill:
+  parameters:
+     bypass_pvp: false
 fling:
   parameters:
      cooldown: 30000
