--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10004,7 +10004,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - mortal
+    - harrypotter
     options:
       name: xDcGamer
     worlds:
@@ -13020,7 +13020,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - redranger
+    - mortal
     options:
       name: _WonderBat_
     worlds:
@@ -16390,7 +16390,7 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - harrypotter
+    - blackracerwilliewalker
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
