--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -42,7 +42,7 @@ spells:
   disarm:
     name: Expelliarmus
     description: Disarm your opponent
-  superkill:
+  kill:
     name: Avadakadavra
     description: Killing Curse... enough said
   torture:
