--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -62,6 +62,10 @@
 # kill:
 #    costs:
 #       health: 10 
+kill:
+  parameters:
+     player_damage: 999
+     entity_damage: 999
 superkill:
   parameters:
      bypass_pvp: false
