--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -43,7 +43,7 @@ spells:
     name: Expelliarmus
     description: Disarm your opponent
   kill:
-    name: Avadakadavra
+    name: Avadakedavra
     description: Killing Curse... enough said
   torture:
     name: Crucio
