--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -10004,7 +10004,7 @@ users:
       name: freshlybaked1
   0130299a-4489-429d-b4eb-68643a4c6ac8:
     group:
-    - harrypotter
+    - mortal
     options:
       name: xDcGamer
     worlds:
@@ -13020,7 +13020,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - mortal
+    - redlanternsupergirl
     options:
       name: _WonderBat_
     worlds:
@@ -14766,7 +14766,7 @@ users:
       name: Gulligapandan
   5610baf3-f4b0-4c1d-90e7-3ff01bfed49a:
     group:
-    - reverseflasheobardthawne
+    - darkseid
     options:
       name: jordan1ninjaboy
   74ac2d34-5234-430c-a11c-197b8af3a9c6:
@@ -15065,7 +15065,7 @@ users:
       name: Fluff106
   d67305a9-1ff9-4357-bd10-1b5fd8856d78:
     group:
-    - ironfist
+    - blackracerwilliewalker
     options:
       name: EagleSniper10
     permissions: []
@@ -15600,7 +15600,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - mortal
+    - lukeskywalker
     options:
       name: mythguy1226
     permissions:
@@ -16390,7 +16390,7 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - blackracerwilliewalker
+    - bluelanternbarryallen
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
