--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -66,6 +66,7 @@ kill:
   parameters:
      player_damage: 999
      entity_damage: 999
+     velocity: 25
 superkill:
   parameters:
      bypass_pvp: false
