--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11404,12 +11404,13 @@ users:
       name: katesawesome
   87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
     group:
-    - zion
+    - superman
     options:
       name: God_Doesnt_Exist
       prefix: ''
       suffix: ''
     permissions:
+    - -powers.onepunch
     - -change.chat
     - is.married
     - -is.secretary
@@ -12187,7 +12188,7 @@ users:
     group:
     - mortal
     options:
-      name: Stymiee
+      name: Chararara
   d71ca07f-dffd-42cb-ad49-9034143f641a:
     group:
     - mortal
@@ -14504,7 +14505,7 @@ users:
       name: jkwynn
   340e7d5b-c44c-48c3-84a0-95a029356119:
     group:
-    - greenarrow
+    - savitar
     options:
       name: Aidos04
     permissions: []
@@ -14522,7 +14523,7 @@ users:
     permissions: []
   e9a61dbb-3a32-43aa-876f-c11fd78b69de:
     group:
-    - martianmanhunter
+    - onepunchman
     options:
       name: Mailsemaj
   41ba8f33-7b7e-43d1-b605-d61a3635eb6e:
@@ -14939,7 +14940,7 @@ users:
     permissions: []
   5f238a5f-3586-4e83-9338-c3533b5cf96f:
     group:
-    - harrypotter
+    - mortal
     options:
       name: DemonWolf_
     permissions: []
@@ -15065,7 +15066,7 @@ users:
       name: Fluff106
   d67305a9-1ff9-4357-bd10-1b5fd8856d78:
     group:
-    - blackracerwilliewalker
+    - flashbartallen
     options:
       name: EagleSniper10
     permissions: []
@@ -15600,7 +15601,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - lukeskywalker
+    - blackracerwilliewalker
     options:
       name: mythguy1226
     permissions:
@@ -16390,7 +16391,7 @@ users:
       name: TheKairi
   a752d496-7d24-4764-87a3-a179f84e31ae:
     group:
-    - bluelanternbarryallen
+    - flashwallywest
     options:
       name: Scrachy10
   5f6efde4-f0b6-44fd-8427-96098276c6b7:
@@ -16683,6 +16684,9 @@ users:
     - reverseflasheobardthawne
     options:
       name: Vinne06
+  5a7c6e9b-b21f-4122-a390-2d73a18fd778:
+    group:
+    - apocalypse
 worlds:
   checkers:
     inheritance:
