--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,5 +1,40 @@
 groups:
-  hippolytadc:
+ wondergirldt:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&0Wo&7nder&8Gi&7rl&8(D&7T&8)'
+      suffix: '&7'
+    worlds:
+      survival:
+        permissions:
+        - -essentials.protect.damage.fall
+        - ch.alias.dismountplayer
+        - ch.alias.carryplayer
+        - essentials.fly
+        - essentials.speed.fly
+        - essentials.speed
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
+        - ch.alias.haste5
+        - ch.alias.haste6
+ hippolytadc:
     inheritance:
     - commonherotraits
     options:
