--- a/Magic/spells.yml
+++ b/Magic/spells.yml
@@ -62,6 +62,9 @@
 # kill:
 #    costs:
 #       health: 10 
+fireball:
+  parameters:
+     break_blocks: false
 kill:
   parameters:
      player_damage: 999
