--- a/Magic/messages.yml
+++ b/Magic/messages.yml
@@ -81,3 +81,30 @@ spells:
   blink:
     name: Apparate
     description: Teleport where you point your wand
+  heal:
+    name: Episkey
+    description: Heal yourself or others
+  boom:
+    name: Bombarda
+    description: Creates a small explosion
+  blind:
+    name: Conjunctivitis
+    description: Blinds your target
+  counterspell:
+    name: Finite Incantatum
+    description: Counters other spells
+  entangle:
+    name: Incarcerous
+    description: Bind your target in ropes
+  flashbang:
+    name: Lumos Solem
+    description: Create a very bright light
+  frost:
+    name: Glacius
+    description: Freeze others and water
+  flamethrower:
+    name: Firestorm
+    description: Throw flames
+  stream:
+    name: Aqua Eructo
+    description: Spray a stream of water
