--- a/WorldGuard/worlds/infiniteparkour/regions.yml
+++ b/WorldGuard/worlds/infiniteparkour/regions.yml
@@ -16,7 +16,7 @@ regions:
         members: {}
         flags: {ice-form: deny, use: allow, invincible: allow, interact: allow}
         owners:
-            unique-ids: [98163bdb-968d-4a0e-96fd-10714ae78950]
+            unique-ids: [98163bdb-968d-4a0e-96fd-10714ae78950, e68eeab6-09df-4979-aa3f-13ee786a0a10]
         type: cuboid
         priority: 0
     __global__:
