Update permissions.yml to add /fly for totoro

--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -4112,6 +4112,7 @@ groups:
       survival:
         permissions:
         - -essentials.protect.damage.fall
+        - essentials.fly
         - ch.alias.totoro
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
