--- a/Essentials/config.yml
+++ b/Essentials/config.yml
@@ -931,7 +931,7 @@ protect:
 
     # Users with the essentials.protect.pvp permission will still be able to attack each other if this is set to true.
     # They will be unable to attack users without that same permission node.
-    pvp: false
+    pvp: true
 
     # Should drowning damage be disabled?
     # (Split into two behaviors; generally, you want both set to the same value.)
