--- a/WorldGuard/worlds/infiniteparkour/regions.yml
+++ b/WorldGuard/worlds/infiniteparkour/regions.yml
@@ -16,7 +16,7 @@ regions:
         members: {}
         flags: {ice-form: deny, invincible: allow, use: allow, interact: allow}
         owners:
-            unique-ids: [98163bdb-968d-4a0e-96fd-10714ae78950, b6a9ea16-f2d9-40c9-9274-5d32fce62400]
+            unique-ids: [98163bdb-968d-4a0e-96fd-10714ae78950]
         type: cuboid
         priority: 0
     __global__:
