--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,11 +1,12 @@
-storage: {_WonderBat_spouse: '"God_Doesnt_Exist"', SirRicardospouse: '"Camulll"',
-  topleft1: '7', topleft2: '2', Predamorph1519spouse: '"Camulll"', topleft3: '1',
-  nullspouse: '""', testID3: '0', testID1: '9', topmiddle3: '2', testID2: '7', topmiddle2: '7',
-  nightghost2spouse: '"SS_HarleyQuinn"', bottomleft1: '1', bottomright3: '2', topmiddle1: '2',
-  bottomright1: '2', bottomright2: '6', Like_A_Boss382spouse: '"Camulll"', ThatCraftLifespouse: '"Camulll"',
-  southmachine1: '6', bottomleft2: '5', bottomleft3: '1', northmachine2: '4', northmachine3: '5',
-  SS_HarleyQuinnspouse: '"nightghost2"', southmachine3: '4', southmachine2: '3', LostInGalaxeh_spouse: '"Camulll"',
-  eastmachine1: '2', topright3: '2', topright2: '4', topright1: '0', EmmettGamingspouse: '"SirRicardo"',
-  northmachine1: '5', bottommiddle1: '4', bottommiddle2: '0', mythguy1226spouse: '""',
-  bottommiddle3: '1', westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6',
-  Camulllspouse: '"xDcGamer"', westmachine2: '6', God_Doesnt_Existspouse: '"_WonderBat_"'}
+storage: {_WonderBat_spouse: '"Eobard765Man"', SirRicardospouse: '"Camulll"', topleft1: '3',
+  topleft2: '6', Predamorph1519spouse: '"Camulll"', topleft3: '2', nullspouse: '""',
+  lissakittyspouse: '"God_Doesnt_Exist"', testID3: '0', testID1: '9', topmiddle3: '0',
+  testID2: '7', topmiddle2: '7', nightghost2spouse: '"SS_HarleyQuinn"', bottomleft1: '7',
+  bottomright3: '0', topmiddle1: '9', bottomright1: '7', bottomright2: '6', Like_A_Boss382spouse: '"Camulll"',
+  ThatCraftLifespouse: '"Camulll"', southmachine1: '6', bottomleft2: '0', bottomleft3: '1',
+  northmachine2: '4', northmachine3: '5', SS_HarleyQuinnspouse: '"nightghost2"', southmachine3: '4',
+  southmachine2: '3', LostInGalaxeh_spouse: '"Camulll"', eastmachine1: '2', topright3: '6',
+  topright2: '6', topright1: '6', EmmettGamingspouse: '"SirRicardo"', northmachine1: '5',
+  bottommiddle1: '6', bottommiddle2: '1', mythguy1226spouse: '""', bottommiddle3: '6',
+  westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6', Camulllspouse: '"xDcGamer"',
+  westmachine2: '6', God_Doesnt_Existspouse: '"lissakitty"'}
