--- a/FurnitureLib/limitation/chunk.yml
+++ b/FurnitureLib/limitation/chunk.yml
@@ -1,5 +1,39 @@
 ChunkLimit:
   projects:
+    Swing: -1
+    TornBedBenchB: -1
+    TornSidetableB1: -1
+    TornSidetableB2: -1
+    TornBedB: -1
+    TornDogHouseA: -1
+    TornBathtubA: -1
+    KEWoodStool: -1
+    KEPotPlantA: -1
+    KitchenCabinet: -1
+    Shower: -1
+    bench: -1
+    oplicht: -1
+    sofa1: -1
+    TorSideTableA: -1
+    TornSofaA: -1
+    TornTableA: -1
+    TornLargeTableA: -1
+    TornPianoA: -1
+    TornChairA: -1
+    TornToiletA: -1
+    TornWashstandA: -1
+    KEWoodLazyChairLying: -1
+    KECeilingFan: -1
+    KELampStandA: -1
+    PartyHammock-V2:
+      '0': -1
+    truhlik: -1
+    Fridge: -1
+    OldClock: -1
+    srTV: -1
+    Studio: -1
+    plantdecor: -1
+    Eten: -1
     BigSLampI: -1
     TornSwordB1: -1
     BigSSmallTable: -1
