--- a/FurnitureLib/limitation/player.yml
+++ b/FurnitureLib/limitation/player.yml
@@ -1,26 +1,41 @@
 PlayerLimit:
   default:
     projects:
+      Swing: 10
+      TornBedBenchB: 10
+      TornSidetableB1: 10
+      TornSidetableB2: 10
+      TornBedB: 10
+      TornDogHouseA: 10
+      TornBathtubA: 10
+      KEWoodStool: 10
+      KEPotPlantA: 10
+      TornToiletA: 10
+      KitchenCabinet: 10
+      Shower: 10
+      bench: 10
+      oplicht: 10
+      sofa1: 10
+      torsidetablea: 10
+      TornSofaA: 10
+      TornTableA: 10
+      TornLargeTableA: 10
+      TornPianoA: 10
+      TornChairA: 10
+      TornWashstandA: 10
+      KEWoodLazyChairLying: 10
+      KECeilingFan: 10
+      KELampStandA: 10
       BigSLampI: 10
-      TornSwordB1: 10
-      BigSSmallTable: 10
-      KEMonitorAPack: 10
-      KELaptopA: 10
-      KEWarningLampSide: 10
-      Oven: 10
-      TornDeskA1: 10
-      BarStool: 10
-      TornFireplaceB1: 10
-      TornComputerA: 10
-      TornChairC: 10
-      blackboard: 10
-      toilet: 10
-      TornBedA: 10
-      TornWellA1: 10
-      TornBenchC: 10
-      tent5: 10
-      sofa2: 10
-      sofa3: 10
+      PartyHammock-V2:
+        '0': 10
+      truhlik: 10
+      Fridge: 10
+      OldClock: 10
+      srTV: 10
+      Studio: 10
+      plantdecor: 10
+      Eten: 10
       Sofa: 10
       Camera: 10
       GraveStone: 10
@@ -64,6 +79,26 @@ PlayerLimit:
       Campfire2: 10
       Campfire1: 10
       LargeTable: 10
+      MailBox: 10
+      TornFireplaceB1: 10
+      KEWarningLampSide: 10
+      Oven: 10
+      TornBenchC: 10
+      tent5: 10
+      sofa3: 10
+      toilet: 10
+      TornChairC: 10
+      TornDeskA1: 10
+      BigSSmallTable: 10
+      BarStool: 10
+      TornComputerA: 10
+      TornSwordB1: 10
+      KEMonitorAPack: 10
+      KELaptopA: 10
+      TornBedA: 10
+      TornWellA1: 10
+      sofa2: 10
+      blackboard: 10
     total:
       enable: false
       amount: -1
