--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8578,7 +8578,7 @@ groups:
         - powers.wallclimb
         - ch.alias.websling
         - -essentials.protect.damage.fall
-        - ch.alias.spidermanpeterparker
+        - ch.alias.civilianpeterparker
         - ch.alias.carryplayer
         - ch.alias.dismountplayer
         - ch.alias.web
