--- a/CommandHelper/storage.yml
+++ b/CommandHelper/storage.yml
@@ -1,12 +1,22 @@
-storage: {_WonderBat_spouse: '"Eobard765Man"', SirRicardospouse: '"Camulll"', topleft1: '3',
-  topleft2: '6', Predamorph1519spouse: '"Camulll"', topleft3: '2', nullspouse: '""',
-  lissakittyspouse: '"God_Doesnt_Exist"', testID3: '0', testID1: '9', topmiddle3: '0',
-  testID2: '7', topmiddle2: '7', nightghost2spouse: '"SS_HarleyQuinn"', bottomleft1: '7',
-  bottomright3: '0', topmiddle1: '9', bottomright1: '7', bottomright2: '6', Like_A_Boss382spouse: '"Camulll"',
-  ThatCraftLifespouse: '"Camulll"', southmachine1: '6', bottomleft2: '0', bottomleft3: '1',
-  northmachine2: '4', northmachine3: '5', SS_HarleyQuinnspouse: '"nightghost2"', southmachine3: '4',
-  southmachine2: '3', LostInGalaxeh_spouse: '"Camulll"', eastmachine1: '2', topright3: '6',
-  topright2: '6', topright1: '6', EmmettGamingspouse: '"SirRicardo"', northmachine1: '5',
-  bottommiddle1: '6', bottommiddle2: '1', mythguy1226spouse: '""', bottommiddle3: '6',
-  westmachine1: '6', eastmachine3: '2', eastmachine2: '3', westmachine3: '6', Camulllspouse: '"xDcGamer"',
-  westmachine2: '6', God_Doesnt_Existspouse: '"lissakitty"'}
+storage: {_WonderBat_spouse: '"Eobard765Man"', LostInGalaxeh_fightClubWins: '4', Mamby101fightClubWins: '0',
+  xDcGamerfightClubLosses: '4', testID3: '0', ImOnePunchManfightClubWins: '1', testID1: '9',
+  topmiddle3: '1', testID2: '7', topmiddle2: '6', DemonWolf_fightClubLosses: '8',
+  bottomright3: '0', topmiddle1: '3', SS_HarleyQuinnfightClubWins: '1', bottomright1: '1',
+  bottomright2: '8', bottomleft2: '9', bottomleft3: '0', TooFluffyfightClubWins: '14',
+  FunCaptianrexfightClubLosses: '2', lissakittyfightClubLosses: '0', CorruptRacerfightClubWins: '1',
+  LostInGalaxeh_spouse: '"Camulll"', God_Doesnt_ExistfightClubLosses: '1', God_Doesnt_ExistfightClubWins: '2',
+  LordOfGallifreyfightClubLosses: '1', DemonWolf_fightClubWins: '3', bottommiddle1: '4',
+  bottommiddle2: '0', mythguy1226spouse: '""', CorruptRacerfightClubLosses: '3', bottommiddle3: '2',
+  westmachine1: '6', westmachine3: '6', Camulllspouse: '"xDcGamer"', westmachine2: '6',
+  mythguy1226fightClubLosses: '5', SirRicardospouse: '"Camulll"', ImOnePunchManfightClubLosses: '1',
+  Wolfie35fightClubLosses: '2', Mamby101fightClubLosses: '0', topleft1: '8', topleft2: '6',
+  Predamorph1519spouse: '"Camulll"', topleft3: '1', nullspouse: '""', lissakittyspouse: '"God_Doesnt_Exist"',
+  mythguy1226fightClubWins: '15', nightghost2spouse: '"SS_HarleyQuinn"', CamulllfightClubLosses: '1',
+  bottomleft1: '0', nightghost2fightClubWins: '3', nightghost2fightClubLosses: '11',
+  xDcGamerfightClubWins: '7', Like_A_Boss382spouse: '"Camulll"', TooFluffyfightClubLosses: '4',
+  Honeybazz118fightClubWins: '1', ThatCraftLifespouse: '"Camulll"', southmachine1: '6',
+  SS_HarleyQuinnfightClubLosses: '2', northmachine2: '4', northmachine3: '5', SS_HarleyQuinnspouse: '"nightghost2"',
+  lissakittyfightClubWins: '0', southmachine3: '4', xDcGamerspouse: '"Camulll"', southmachine2: '3',
+  Honeybazz118fightClubLosses: '3', LostInGalaxeh_fightClubLosses: '4', eastmachine1: '2',
+  topright3: '2', topright2: '0', topright1: '0', EmmettGamingspouse: '"SirRicardo"',
+  northmachine1: '5', eastmachine3: '2', eastmachine2: '3', God_Doesnt_Existspouse: '"lissakitty"'}
