--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -6155,6 +6155,7 @@ groups:
       prefix: Mortal
       suffix: '&f'
     permissions:
+    - multiverse.access.fightclub
     - -magic.*
     - -essentials.warps.surprisekill
     - ch.alias.chatsounds
@@ -6703,8 +6704,10 @@ groups:
         - essentials.build.interact.*
       fightclub:
         permissions:
-        - essentials.build.interact.*
+        - ch.alias.fightclubbet
         - ch.alias.fightclub
+        - ch.alias.fightclubstats
+        - essentials.build.interact.*
   commonherotraits:
     inheritance:
     - mortal
@@ -10030,7 +10033,10 @@ users:
     worlds:
       greenfield:
         permissions: []
+      fightclub:
+        permissions: []
     permissions:
+    - is.married
     - multiverse.access.underworld
   0163b69a-4dc7-4caa-ad07-d6c14db6f37a:
     options:
@@ -10491,7 +10497,7 @@ users:
       name: Omegaglade23
   28556dea-667d-409f-b2ff-fb4177a20ff2:
     group:
-    - mortal
+    - missmartian
     options:
       name: LostInGalaxeh_
     worlds:
@@ -10614,7 +10620,7 @@ users:
       prefix: '&7{&4Hacker&7} '
   3171ad72-84a2-4519-a3f4-77ea38085dc9:
     options:
-      name: Acornful
+      name: BipBapBoop
     group:
     - darkseid
     worlds:
@@ -10703,7 +10709,7 @@ users:
     options:
       name: SajiFilms
     group:
-    - mortal
+    - martianmanhunter
     worlds:
       garbageworld:
         permissions:
@@ -10908,9 +10914,9 @@ users:
       name: ItsaSteampunk_
   4ff867f5-6cab-413e-9fad-e4d77ca48778:
     group:
-    - emmafrost
+    - missmartian
     options:
-      name: AddictedToSugar
+      name: Rozuu
     permissions:
     - -deluxechat.pm
     worlds:
@@ -11108,7 +11114,7 @@ users:
       name: JustKas
   66edaf7d-94e7-44cf-9d99-34d3ad90594e:
     group:
-    - blacklanternmartianmanhunter
+    - firestormraymondstein
     options:
       name: EmmettGaming
     worlds:
@@ -11138,7 +11144,7 @@ users:
       name: xsuperkidsx
   6823f174-6db7-40f4-9575-10d9cefaafb0:
     group:
-    - superboykonel
+    - thefourthdoctor
     options:
       name: Alonedarkassasin
   6882e3f8-3786-4f60-8ed0-8c2a89332172:
@@ -11510,6 +11516,7 @@ users:
         permissions: []
       fightclub:
         permissions:
+        - essentials.protect.pvp
         - -essentials.protect.pvp
   88e901d2-ec28-4cc8-bad0-1de00d303fc1:
     group:
@@ -11840,7 +11847,7 @@ users:
       name: triffs
   abd266a9-7aee-4091-aacc-e4047ba6ef5b:
     group:
-    - godfallsuperman
+    - wondergirl
     options:
       name: Dream_Walker_
     permissions:
@@ -12568,7 +12575,7 @@ users:
     options:
       name: crusher31415
     group:
-    - darkseid
+    - blackracerwilliewalker
     worlds:
       fightclub:
         permissions: []
@@ -12754,10 +12761,11 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - supergirl
+    - psylocke
     options:
       name: Camulll
     permissions:
+    - is.married
     - chat.cooldown
     - multiverse.access.underworld
     - -essentials.afk
@@ -12965,7 +12973,7 @@ users:
       name: Alittlebitrandom
   64572c10-48af-4f46-a706-aef5a6248140:
     group:
-    - gorillagrodd
+    - harrypotter
     options:
       name: Legobuilder122
     worlds:
@@ -13135,7 +13143,7 @@ users:
       name: Soggy_Wafer
   c8b88131-52d4-4af0-9593-ddcdb3d56058:
     group:
-    - missmartian
+    - xtwothree
     options:
       name: _WonderBat_
     worlds:
@@ -13788,7 +13796,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - harrypotter
+    - flashbarryallen
     options:
       name: CorruptRacer
     permissions: []
@@ -13878,13 +13886,13 @@ users:
       name: _JohnFTW_
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - blacklanterndeathstormraymondrusch
+    - apocalypse
     options:
       name: Bubbatruk
     permissions: []
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - apocalypse
+    - deadpool
     options:
       name: Bcrulez
     permissions: []
@@ -14351,7 +14359,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - blacklanternmartianmanhunter
+    - quicksilver
     options:
       name: nightghost2
     permissions:
@@ -14359,6 +14367,8 @@ users:
     - multiverse.access.centralcity
     worlds:
       greenfield:
+        permissions: []
+      fightclub:
         permissions: []
   e20359ed-a091-438c-a9b4-4abddbab8ede:
     group:
@@ -14376,6 +14386,9 @@ users:
     options:
       name: TooFluffy
     permissions: []
+    worlds:
+      fightclub:
+        permissions: []
   05a43d17-2abf-46d0-a1dd-99527325eb00:
     group:
     - mortal
@@ -14456,7 +14469,7 @@ users:
       name: ccv3
   8cb964f5-d345-4a65-8811-cb3b0c11b51b:
     group:
-    - goku
+    - flashbarryallen
     options:
       name: Vengeance007
     permissions: []
@@ -15000,7 +15013,7 @@ users:
     group:
     - reverseflasheobardthawne
     options:
-      name: _MyStreetAaron
+      name: OMGitzAlyssa_
   40477199-9afc-4187-acc8-d3d6176b32ba:
     group:
     - blackflash
@@ -15104,6 +15117,9 @@ users:
     options:
       name: DemonWolf_
     permissions: []
+    worlds:
+      fightclub:
+        permissions: []
   002b10b9-d275-422c-ba68-255853e98caa:
     group:
     - vision
@@ -15120,7 +15136,7 @@ users:
       name: NinjaPizza3
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group:
-    - ironmanmkxliii
+    - ironmanmkxv
     options:
       name: BrainyRuler
     permissions: []
@@ -15422,11 +15438,13 @@ users:
       name: JunahPlays
   3c1360c6-ccb0-4a6e-851c-e50fd7ee1de8:
     group:
-    - silversurfer
+    - quarantine
     options:
       name: Honeybazz118
     worlds:
       infiniteparkour:
+        permissions: []
+      fightclub:
         permissions: []
   27966eda-bf56-48ca-9924-a7a71700562d:
     group:
@@ -15707,7 +15725,7 @@ users:
       name: Macmac
   f56713b1-d391-4726-b814-0f3f2ec815c4:
     group:
-    - mortal
+    - blacklanterndeathstormraymondrusch
     options:
       name: yoshiguide
     permissions: []
@@ -15996,7 +16014,7 @@ users:
     permissions: []
   45bcb3ec-1dcb-41fe-ac6e-dac3c41f3ea7:
     group:
-    - blacklanterndeathstormraymondrusch
+    - mrmxyzptlk
     options:
       name: BlueWolf4Life
     permissions: []
@@ -16240,7 +16258,7 @@ users:
       name: AnotherWon
   c6cb4b81-f1e7-446d-b966-e4ed7b45909d:
     group:
-    - blacklanternmartianmanhunter
+    - martianmanhunter
     options:
       name: LordOfGallifrey
     permissions: []
@@ -16314,7 +16332,7 @@ users:
       name: XxBloodShedxX
   14583bba-da31-48ef-97e0-0043479ed159:
     group:
-    - thor
+    - superman
     options:
       name: Pogonip
     permissions: []
@@ -16374,7 +16392,7 @@ users:
       name: DrHERO1
   ab873698-78fa-4776-a17b-1a8702d32955:
     group:
-    - mortal
+    - bluelanternbarryallen
     options:
       name: ruzster
   5fc25ef5-78fd-4824-a70a-2c9f6ec678d1:
@@ -16444,9 +16462,12 @@ users:
       name: Jqnitor
   84fd8845-7603-437f-b271-5ef0cfaae41a:
     group:
-    - ichigokurosaki
+    - starfire
     options:
       name: BossSlasher
+    worlds:
+      greenfield:
+        permissions: []
   401d470d-f4b0-4da7-be80-7d2f75cc687d:
     group:
     - flashbartallen
@@ -16912,10 +16933,14 @@ users:
       name: IronRolay
   0a5357e9-2f1e-4fc6-87cc-dc03d592bd20:
     group:
-    - beastboy
+    - onepunchman
     options:
       name: adrie_le_zarbi
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
+    worlds:
+      greenfield:
+        permissions: []
   077d6696-918b-4d39-a02d-726c5173ade1:
     group:
     - blackflash
@@ -17074,7 +17099,7 @@ users:
     permissions: []
   b6a9ea16-f2d9-40c9-9274-5d32fce62400:
     group:
-    - onepunchman
+    - redhood
     options:
       name: madman21804
     worlds:
@@ -17082,7 +17107,7 @@ users:
         permissions: []
   e68eeab6-09df-4979-aa3f-13ee786a0a10:
     group:
-    - blueranger
+    - 3dmandelroygarrett
     options:
       name: GuildedHero46
     worlds:
@@ -17107,7 +17132,7 @@ users:
       name: half_face
   4513d2fb-206a-4bb2-8119-86519d8a9475:
     group:
-    - lukeskywalker
+    - blackflash
     options:
       name: gavingamer2
   70cd30df-71a5-4bba-bc0c-263e6ea5f6d6:
@@ -17216,6 +17241,78 @@ users:
         permissions: []
     options:
       name: DopierMango363
+  64244064-5bec-4eef-b757-0e81617fcde2:
+    group:
+    - doctorstrange
+    options:
+      name: Freja15k
+  3a3ba1c8-7fa6-4e4c-832b-e46a7cda2da6:
+    group:
+    - ironmanmkxlvi
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: Master_Trap
+  38b6c0ea-15f7-4167-8f38-042fcdab74a2:
+    group:
+    - flashbartallen
+    options:
+      name: KomiK_Crafter
+    worlds:
+      greenfield:
+        permissions: []
+  17200bac-5aab-455d-aec1-a7a9765c854f:
+    group:
+    - superman
+    options:
+      name: Bossman_135
+  2726d4c4-183a-44e4-b34b-ad96d1461bf6:
+    group:
+    - batman
+    permissions:
+    - multiverse.access.underworld
+    options:
+      name: Oliverbatman
+  d4c4bf76-c37f-407f-9a3e-ce969c308aff:
+    group:
+    - spidermanpeterparker
+    worlds:
+      greenfield:
+        permissions: []
+    options:
+      name: biyellow1
+  cc78c87e-4306-4c25-91a8-eb4fc03e1107:
+    group:
+    - carnage
+    options:
+      name: Gingastries
+  04843c72-62ef-4a65-8d09-152cd3b42fcb:
+    group:
+    - vision
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
+    options:
+      name: Cyborg_Genos
+  18b721cb-1703-42dd-aaf2-1c1e39e9a110:
+    group:
+    - onepunchman
+    options:
+      name: ImOnePunchMan
+    worlds:
+      greenfield:
+        permissions: []
+      fightclub:
+        permissions: []
+  0e0762f9-f266-4545-89a9-019e41f92e5a:
+    group:
+    - flashwallywest
+    worlds:
+      fightclub:
+        permissions: []
 worlds:
   checkers:
     inheritance:
