--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -11157,9 +11157,9 @@ users:
       name: TNTGriepher
   68c77a39-b32f-4acc-afb6-7f3a204b6445:
     group:
-    - goku
+    - flashwalterwest
     options:
-      name: TheEvolvedShadow
+      name: EvolvedShadowYT
   695c4d78-22c5-40e4-b0d4-286ab17c02cf:
     group:
     - superman
@@ -11481,7 +11481,6 @@ users:
       prefix: ''
       suffix: ''
     permissions:
-    - -powers.onepunch
     - is.married
     - magic.*
     - essentials.warps.surprisekill
@@ -11516,7 +11515,6 @@ users:
         permissions: []
       fightclub:
         permissions:
-        - essentials.protect.pvp
         - -essentials.protect.pvp
   88e901d2-ec28-4cc8-bad0-1de00d303fc1:
     group:
@@ -12575,7 +12573,7 @@ users:
     options:
       name: crusher31415
     group:
-    - blackracerwilliewalker
+    - onepunchman
     worlds:
       fightclub:
         permissions: []
@@ -12634,7 +12632,7 @@ users:
       name: GAMINGwithKEYSER
   f012a423-c018-4c9e-aab8-3a414d1a24c0:
     group:
-    - arsenal
+    - whitelanternkylerayner
     options:
       name: BrinePlaysYT
   f0937393-4970-4677-b4e8-8474a7b72d73:
@@ -12761,7 +12759,7 @@ users:
       name: WarrinPeace
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
     group:
-    - psylocke
+    - supergirl
     options:
       name: Camulll
     permissions:
@@ -13796,7 +13794,7 @@ users:
       name: GmenII2861
   a8f8ce5f-64ee-469d-9b3f-7d7069898694:
     group:
-    - flashbarryallen
+    - deadpool
     options:
       name: CorruptRacer
     permissions: []
@@ -13886,13 +13884,14 @@ users:
       name: _JohnFTW_
   be9c2fcc-e2f9-4733-8b5d-b14ee515c12d:
     group:
-    - apocalypse
+    - silversurfer
     options:
       name: Bubbatruk
-    permissions: []
+    permissions:
+    - multiverse.access.underworld
   b09b6618-e035-4e1f-be4e-f01ec6888001:
     group:
-    - deadpool
+    - beerus
     options:
       name: Bcrulez
     permissions: []
@@ -14244,7 +14243,7 @@ users:
       name: ii_Ashura
   ae107f34-4831-49c2-bfe8-0974342077e0:
     group:
-    - reverseflasheobardthawne
+    - infinitysilversurfer
     options:
       name: FunCaptianrex
     permissions:
@@ -14359,7 +14358,7 @@ users:
       name: Captin_Awesome
   a8185de3-b053-4aca-9eb6-d98728e476ad:
     group:
-    - quicksilver
+    - flashwallywest
     options:
       name: nightghost2
     permissions:
@@ -15136,7 +15135,7 @@ users:
       name: NinjaPizza3
   c5d1f6d3-f22a-49be-9f83-4b9b1f42e61f:
     group:
-    - ironmanmkxv
+    - ironmanmkxliii
     options:
       name: BrainyRuler
     permissions: []
@@ -15322,7 +15321,7 @@ users:
       name: Chromedist
   67a6d658-fe55-41e6-89d2-78e5ace804e9:
     group:
-    - goku
+    - onepunchman
     options:
       name: KennyKenshiKoala
   f0d32a45-3a55-451f-8502-8bbcff907507:
@@ -15562,7 +15561,7 @@ users:
       name: TobbaZ_
   91fc2103-8827-4662-8305-26ef6f1e6d45:
     group:
-    - flashbarryallen
+    - impulsebartallen
     options:
       name: CoolWolfPower
     worlds:
@@ -15811,7 +15810,7 @@ users:
       name: DerpyPlayzYT
   f621586e-8ef8-448d-9264-86b61375052e:
     group:
-    - dormammu
+    - harrypotter
     options:
       name: mythguy1226
     permissions:
@@ -15842,7 +15841,7 @@ users:
       name: epic_lord71
   3f97bfa3-8301-48b9-9d2e-07b328671293:
     group:
-    - darkseid
+    - blackracerwilliewalker
     options:
       name: 54wolfman
   8b1ea473-d238-4ae6-b52e-b26e38302df9:
@@ -17132,7 +17131,7 @@ users:
       name: half_face
   4513d2fb-206a-4bb2-8119-86519d8a9475:
     group:
-    - blackflash
+    - ironmanmkxliii
     options:
       name: gavingamer2
   70cd30df-71a5-4bba-bc0c-263e6ea5f6d6:
@@ -17309,10 +17308,31 @@ users:
         permissions: []
   0e0762f9-f266-4545-89a9-019e41f92e5a:
     group:
-    - flashwallywest
+    - goku
     worlds:
       fightclub:
         permissions: []
+    options:
+      name: Son_Daiko
+  0e20268d-ad1a-4a5a-b867-1bd57a24468f:
+    group:
+    - superboykalel
+    options:
+      name: Destro717
+    worlds:
+      greenfield:
+        permissions: []
+  8e947705-440e-4b30-a05c-010e4da817a4:
+    group:
+    - deathstroke
+    worlds:
+      greenfield:
+        permissions: []
+  14ef9fd7-140a-4669-b2bf-74a47673db47:
+    group:
+    - snoopdogg
+    options:
+      name: DerpIndustries
 worlds:
   checkers:
     inheritance:
